volta lista de cursos

--- a/flip.html
+++ b/flip.html
@@ -146,7 +146,53 @@
             <img src="https://www.alura.com.br/assets/api/cursos/otimizacao-performance-web.svg">
             <span>Performance Web I: otimizando o front-end</span>
 
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/node-js.svg">
+            <span>Node.js: Inovando com Javascript no backend</span>
 
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/gulp.svg">
+            <span>Gulp: automação de tarefas front-end</span>
+
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/web-design-responsivo.svg">
+            <span>Web Design Responsivo: Páginas que se adaptam do mobile ao desk</span>
+
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/mean-javascript.svg">
+            <span>MEAN Stack: criando aplicações completas com Javascript</span>
+
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/performance-http2-critical-path.svg">
+            <span>Performance Web II: Critical Path, HTTP/2 e Resource Hints</span>
+
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/introducao-ao-jquery.svg">
+            <span>jQuery I: Introdução à biblioteca campeã de JavaScript</span>
+
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/introducao-html-css.svg">
+            <span>HTML5 e CSS3 I: Suas primeiras páginas da Web</span>
+
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/fundamentos-http.svg">
+            <span>HTTP: Entendendo a web por baixo dos panos</span>
+
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/angularjs-mvc.svg">
+            <span>AngularJS: crie webapps poderosas</span>
+
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/bootstrap-criacao-single-page-responsiva.svg">
+            <span>Bootstrap: criação de uma single-page responsiva</span>
+
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/meteorjs.svg">
+            <span>Meteor: Crie single page applications com JavaScript</span>
+
+        <li class="cartao">
+            <img src="https://www.alura.com.br/assets/api/cursos/sass.svg">
+            <span>Sass e Compass: Descomplicando o CSS</span>
 
     </ul>
 
