--- a/flip.html
+++ b/flip.html
@@ -32,7 +32,6 @@
             margin: 10px;
             line-height: 100px;
             transform-origin: 0 0;
-            display: inline-block;
             width: calc(100% - 20px);
             vertical-align: middle;
             cursor: pointer;
@@ -62,8 +61,7 @@
             	padding: 4px;
             }
 
-            .cartao:hover:after {
-            	
+            .cartao:hover:after {	
             	background: #f0f0f0;
             }
 
@@ -86,8 +84,10 @@
         	text-align: center;
         }
 
+        /* (opcional) multiplas colunas com inline-block */
         @media(min-width: 600px) {
             .cartao {
+                display: inline-block;
                 width: calc(50% - 20px);
             }
             h1 { font-size: 19px;}
