--- a/flip.html
+++ b/flip.html
@@ -3,134 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Animações FLIP</title>
-
-    <style>
-        /* estilo */
-        *, *:after, *:before {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        html {
-            background: #f7fafb;
-            color: #333;
-            font-family: Open Sans;
-            margin: 20px;
-        }
-
-        .lista {
-            list-style-type: none;
-            margin: 20px auto;
-            position: relative;
-        }
-
-        .cartao {
-            background-color: white;
-            box-shadow: 0 0 4px rgba(0,0,0,0.4);
-            font-size: 14px;
-            margin: 10px;
-            line-height: 100px;
-            transform-origin: 0 0;
-            width: calc(100% - 20px);
-            vertical-align: middle;
-        }
-            .cartao img {
-                vertical-align: middle;
-                margin: 0 10px;
-                width: 45px;
-            }
-
-            .cartao span {
-            	display: inline-block;
-            	width: calc(100% - 92px);
-            	line-height: 1.3;
-            	vertical-align: middle;
-            }
-
-            .cartao button {
-            	display: inline-block;
-            	margin: 2px 2px 0 0;
-            	line-height: 1;
-            	color: #777;
-            	font-size: 10px;
-            	vertical-align: top;
-            	border-radius: 50%;
-            	padding: 4px;
-                border: 0;
-                background: none;
-                cursor: pointer;
-            }
-
-            .cartao button:hover {	
-            	background: #f0f0f0;
-            }
-
-		.logo {
-			display: block;
-			height: 35px;
-			width: 75px;
-			margin: 0 auto 20px;
-		}
-
-        h1 {
-        	font-size: 17px;
-        	text-align: center;
-        }
-
-        h2 {
-        	font-size: 15px;
-        	color: #777;
-        	font-weight: normal;
-        	text-align: center;
-        }
-
-        /* (opcional) multiplas colunas com inline-block */
-        @media(min-width: 600px) {
-            .cartao {
-                display: inline-block;
-                width: calc(50% - 20px);
-            }
-            h1 { font-size: 19px;}
-        }
-
-        @media(min-width: 900px) {
-            .cartao {
-                width: calc(33.3% - 20px);
-            }
-            h1 { font-size: 21px;}
-        }
-
-
-        @media(min-width: 1200px) {
-            .cartao {
-                width: calc(25% - 20px);
-            }
-            h1 { font-size: 24px;}
-        }
-
-
-        /* comportamento */
-        .cartao.remove {
-            position: absolute;
-        }
-
-
-        /* animacao */
-        .anima .cartao {
-            transition: 500ms ease-out;
-        }
-        .anima .cartao.remove {
-            opacity: 0;
-        }
-
-		/* otimizacao */
-		.cartao.remove,
-		.cartao.remove ~ .cartao {
-			will-change: transform;
-		}
-
-    </style>
+    <link rel="stylesheet" href="flip.css">
 </head>
 <body>
 
@@ -211,50 +84,7 @@
 
     </ul>
 
-    <script>
-        var lista = document.querySelector('.lista');
-        var cartoes = Array.prototype.slice.call(document.querySelectorAll('.cartao'));
-
-        cartoes.forEach((cartao) => cartao.querySelector('button').addEventListener('click', cartaoOnClick));
-
-        function cartaoOnClick() {
-            var cartao = this.parentElement;
-			preparaAnimacao(cartao);
-			requestAnimationFrame(disparaAnimacao);
-			cartao.addEventListener('transitionend', aposAnimacao);
-        }
-
-		function preparaAnimacao(cartaoARemover) {
-			// (opcional) corner case pra multiplas colunas
-			var posCartaoARemover = cartaoARemover.getBoundingClientRect();
-			var posLista = lista.getBoundingClientRect();
-			cartaoARemover.style.top = posCartaoARemover.top - posLista.top - 10 + 'px';
-			cartaoARemover.style.left = posCartaoARemover.left - posLista.left - 10 + 'px';
-
-			// pega posicoes dos elementos antes e depois da modificação
-			var posInicial = cartoes.map((cartao) => cartao.getBoundingClientRect());
-			cartaoARemover.classList.add('remove');
-
-			// aplica um transform pra colocar cada cartao de volta no lugar dele
-			cartoes.forEach((cartao, i) => {
-				var posFinal = cartao.getBoundingClientRect();
-				var x = posInicial[i].left - posFinal.left;
-				var y = posInicial[i].top - posFinal.top;
-				cartao.style.transform = `translate(${x}px, ${y}px)`;
-			});
-        }
-
-		function disparaAnimacao() {
-			cartoes.forEach((cartao) => cartao.style.transform = '' );
-			lista.classList.add('anima');
-		}
-
-		function aposAnimacao() {
-			lista.classList.remove('anima');
-			this.remove();
-		}
-        
-    </script>
+    <script src="flip.js"></script>
 
 </body>
 </html>
