--- a/gpu.html
+++ b/gpu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html onclick="this.classList.toggle('azul')">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,40 +8,49 @@
     html {
       width: 100%;
       height: 100%;
-      background: #3399CC;
+      background: #FF9900;
       display: flex;
       justify-content: center;
       align-items: center;
     }
+    html.azul {
+        background: #48a2d4;
+    }
     body {
-      width: 100%;
-    }
-    img {
-        position: relative;
-        top: 50px;
-        left: 0;
-        width: 150px;
-        animation: animaGPU 1s infinite alternate linear;
-    }
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+        text-align: center;
 
-    @keyframes anima {
-        to { left: 200px; width: 250px; }
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
-    @keyframes animaGPU {
-        to { transform: translateX(200px) scale(1.7); }
+    body > * {
+        margin-bottom: 40px;
+    }
+    button {
+        padding: 6px 10px;
+        font-size: 1em;
+    }
+    input {
+        font-size: 1em;
+    }
+    #contador {
+        font-size: 24px;
+        color: white;
+        font-family: monospace;
+    }
+    .coracao {
+        font-size: 60px;
     }
 
     </style>
+    <link rel="stylesheet" href="pulsa.css">
 </head>
 <body>
-<img src="sonic.png">
-<script>
-function fazAlgo() {
-    for (var i = 0; i < 100000; i++) {
-        Math.random();
-    }
-    console.log('fiz algo');
-}
-</script>
+
+<div class="pulsa coracao">❤️</div>
+<script src="fazAlgo.js"></script>
+
 </body>
 </html>
