--- a/mainthread.html
+++ b/mainthread.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html onclick="this.classList.toggle('azul')">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,35 +8,59 @@
     html {
       width: 100%;
       height: 100%;
-      background: #3399CC;
+      background: #FF9900;
       display: flex;
       justify-content: center;
       align-items: center;
     }
-    body {
-        text-align: center;
+    html.azul {
+        background: #48a2d4;
     }
-    label {
-        background: white;
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
         text-align: center;
-        padding: 10px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    body > * {
+        margin-bottom: 40px;
     }
     button {
-        font-size: 16px;
-        padding: 5px;
+        padding: 6px 10px;
+        font-size: 1em;
     }
+    input {
+        font-size: 1em;
+    }
+    #contador {
+        font-size: 24px;
+        color: white;
+        font-family: monospace;
+    }
+    .coracao {
+        font-size: 32px;
+    }
+
+
     </style>
+    <link rel="stylesheet" href="pisca.css">
 </head>
 <body>
-<img src="sonic.gif">
 
-<label><input type="checkbox"> Clique-me</label><br><br>
+<label><input type="checkbox"> só um checkbox</label>
+<div class="pisca coracao">❤️</div>
+<div id="contador">0</div>
+
+<!--<button onclick="document.documentElement.classList.toggle('azul')">Muda cor</button>-->
 <!--<button onclick="fazAlgoPesadoMaisImportante()">Faz algo pesado mais importante</button>-->
 
 <script>
 function fazAlgo() {
-    for (var i = 0; i < 100000; i++) {
-        Math.random();
+    for (var i = 0; i < 120000; i++) {
+        Math.sqrt(Math.sin(Math.random())*Math.PI);
     }
     console.log('fiz algo');
 }
@@ -52,16 +76,23 @@ function fazAlgoPesadoMaisImportante() {
     }
     fazOutroBloco();
 }
+
+const contador = document.querySelector('#contador');
+var valor = 0;
+
+setInterval(() => 
+    contador.textContent = valor++
+, 200);
 </script>
 
 <script type="demo">
 // ex1
-for (var i = 0; i < 1000; i++) fazAlgo();
+for (var i = 0; i < 500; i++) fazAlgo();
 
 // ex2
 var i = 0;
 function fazUmBloco(){
-    if (i++ < 1000) {
+    if (i++ < 500) {
         fazAlgo();
         setTimeout(fazUmBloco, 0);
     }
